# Finsight

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py
scripts/: test_api.py  test_insights.py
tests/: test_db_manager.py
utils/: config_manager.py  db_manager.py  exporter.py  insights.py
views/: add_transaction_view.py  auth_view.py  budget_view.py  dashboard_view.py  goals_view.py  insights_view.py
